[gd_scene load_steps=14 format=3 uid="uid://dfvkd1l7kk3ou"]

[ext_resource type="Texture2D" uid="uid://c80gxdlweys17" path="res://icons/sky.png" id="1_je166"]
[ext_resource type="Script" path="res://scenes/bg_city.gd" id="1_o4eaf"]
[ext_resource type="Texture2D" uid="uid://cp3a36gkbs8sj" path="res://icons/sun.png" id="2_oq2xv"]
[ext_resource type="Texture2D" uid="uid://ds21w0ohlqpsh" path="res://icons/oblaka.png" id="3_xkqcm"]
[ext_resource type="Texture2D" uid="uid://5wol0nhgi3lm" path="res://icons/city_layer2.png" id="4_1d8pa"]
[ext_resource type="Texture2D" uid="uid://kallkstqegv2" path="res://icons/city_layer_1.png" id="5_t51sj"]
[ext_resource type="Texture2D" uid="uid://c2oldybchfush" path="res://icons/belie_1.png" id="5_xt5lo"]
[ext_resource type="Texture2D" uid="uid://ci1v8pito51o5" path="res://icons/belie_2.png" id="7_dxnnr"]

[sub_resource type="Animation" id="Animation_hcnaq"]
resource_name = "new_animation"
length = 0.20001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2l5yb"]
_data = {
"new_animation": SubResource("Animation_hcnaq")
}

[sub_resource type="Animation" id="Animation_na4ua"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_hflax"]
resource_name = "new_animation"
length = 0.20001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_donax"]
_data = {
"RESET": SubResource("Animation_na4ua"),
"new_animation": SubResource("Animation_hflax")
}

[node name="BG_city" type="Node2D"]
script = ExtResource("1_o4eaf")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -10
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_filter = 1
texture = ExtResource("1_je166")
centered = false

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource("2_oq2xv")
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
z_index = -9
motion_scale = Vector2(0.4, 0)
motion_mirroring = Vector2(2732, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource("3_xkqcm")
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
z_index = -9
position = Vector2(1366, 0)
motion_scale = Vector2(0.4, 0)
motion_mirroring = Vector2(2732, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
texture = ExtResource("3_xkqcm")
centered = false
flip_h = true

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -8
motion_scale = Vector2(0.6, 0)
motion_mirroring = Vector2(2732, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
texture = ExtResource("4_1d8pa")
centered = false

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
texture = ExtResource("5_xt5lo")
centered = false
vframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="ParallaxBackground/ParallaxLayer4/Sprite2D2"]
libraries = {
"": SubResource("AnimationLibrary_2l5yb")
}
speed_scale = 0.15

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -8
position = Vector2(1366, 0)
motion_scale = Vector2(0.6, 0)
motion_mirroring = Vector2(2732, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer5"]
texture = ExtResource("4_1d8pa")
centered = false
flip_h = true

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer5"]
texture = ExtResource("5_xt5lo")
centered = false
flip_h = true
vframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="ParallaxBackground/ParallaxLayer5/Sprite2D2"]
libraries = {
"": SubResource("AnimationLibrary_2l5yb")
}
speed_scale = 0.15

[node name="ParallaxLayer6" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -7
motion_scale = Vector2(0.8, 0)
motion_mirroring = Vector2(2732, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer6"]
texture = ExtResource("5_t51sj")
centered = false

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer6"]
texture = ExtResource("7_dxnnr")
centered = false
vframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="ParallaxBackground/ParallaxLayer6/Sprite2D2"]
libraries = {
"": SubResource("AnimationLibrary_donax")
}
speed_scale = 0.15

[node name="ParallaxLayer7" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -7
position = Vector2(1366, 0)
motion_scale = Vector2(0.8, 0)
motion_mirroring = Vector2(2732, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer7"]
texture = ExtResource("5_t51sj")
centered = false
flip_h = true

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer7"]
texture = ExtResource("7_dxnnr")
centered = false
flip_h = true
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="ParallaxBackground/ParallaxLayer7/Sprite2D2"]
libraries = {
"": SubResource("AnimationLibrary_2l5yb")
}
speed_scale = 0.15
