extends Node2D
func _ready():
	$ParallaxBackground/ParallaxLayer4/Sprite2D2/AnimationPlayer.play("new_animation")
	$ParallaxBackground/ParallaxLayer5/Sprite2D2/AnimationPlayer.play("new_animation")
	$ParallaxBackground/ParallaxLayer6/Sprite2D2/AnimationPlayer.play("new_animation")
	$ParallaxBackground/ParallaxLayer7/Sprite2D2/AnimationPlayer.play("new_animation")
